--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-    "name": "frontend",
+    "name": "openfda",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@eyelly/react-printer": "^1.0.0",
         "axios": "^0.18.0",
         "bootstrap": "^4.3.1",
-        "qrcode.react": "^1.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-print": "^1.3.1",
-        "react-printer": "^0.1.0",
         "react-router-dom": "^5.0.0",
         "react-scripts": "^3.4.4",
         "react-table": "^6.10.0",
-        "react-to-print": "^2.11.0",
         "styled-components": "^4.2.0"
     },
     "scripts": {
