--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "axios": "^0.18.0",
         "bootstrap": "^4.3.1",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
         "react-scripts": "^3.4.4",
         "react-table": "^6.10.0",
+        "react-table-hoc-draggable-columns": "^1.2.5",
         "styled-components": "^4.2.0"
     },
     "scripts": {
